# QuadCellDetector

./: .gitattributes  .travis.yml  CONTRIBUTING.md  CenteredGaussianBeamTest.ipynb  L-R.txt  LICENSE  MarchMTG2019-Talk.ipynb  ModelingQuadCellDetector.ipynb  README.md  physics.py  psd.txt  setup.cfg  setup.py  testingNotebook.ipynb
.ipynb_checkpoints/: .Bugs-checkpoint.ipynb.icloud  .testingCode-checkpoint.ipynb.icloud  Bugs-checkpoint.ipynb  Detector-checkpoint.py  MarchMTG2019-Talk-checkpoint.ipynb  ModelingQuadCellDetector-checkpoint.ipynb  physics-checkpoint.py  psd-checkpoint.txt  testingCode-checkpoint.ipynb
.spyproject/: workspace.ini
__pycache__/: physics.cpython-36.pyc.4645880624  physics.cpython-36.pyc.4649651824  physics.cpython-36.pyc.4685164592  physics.cpython-36.pyc.4685165744  physics.cpython-36.pyc.4685166704  physics.cpython-36.pyc.4685166896  physics.cpython-36.pyc.4685167088  physics.cpython-36.pyc.4685167280  physics.cpython-36.pyc.4685167664  physics.cpython-36.pyc.4685168048  physics.cpython-36.pyc.4685168432  physics.cpython-36.pyc.4703151088  physics.cpython-36.pyc.4746000496  physics.cpython-36.pyc.4775297840  physics.cpython-36.pyc.4784070896  physics.cpython-36.pyc.4784071472  physics.cpython-36.pyc.4784071856  physics.cpython-36.pyc.4784072048  physics.cpython-36.pyc.4814573808  physics.cpython-36.pyc.4814574192  physics.cpython-36.pyc.4814574768  physics.cpython-36.pyc.4814574960  physics.cpython-36.pyc.4814575152  physics.cpython-36.pyc.4814575536  physics.cpython-36.pyc.4814575728  physics.cpython-36.pyc.4814575920  (+3 more)
docs/: conf.py  (+6 more)
(+15 files in other folders)
