[metadata]
name = quadcelldetector
author = Paul Nakroshis
summary = A library to simulate the electronic output resulting from the passage of a gaussian beam over a quadrant cell photodiode
license = BSD 3-Clause License
description-file =
    README.md
description-content-type = text/markdown
home-page = https://github.com/university-of-southern-maine-physics/QuadCellDetector
requires-python = >=3.5.6
classifier = 
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[files]
packages =
    quadrantdetector